force-app/main/default/objects/CEMS_Internal_Scheduler__c/CEMS_Internal_Scheduler__c.object-meta.xml
<CustomObject>
    <label>Interview Scheduler</label>
    <nameField>
        <label>Interview Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interview Scheduler</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>