force-app/main/default/objects/CEMS_Internal_Scheduler__c/fields/CEMS_Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Applicant_Email__c</fullName>
    <label>Applicant Email</label>
    <type>Email</type>
</CustomField>