force-app/main/default/objects/CEMS_Internal_Scheduler__c/fields/CEMS_Feedback_Comments__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Feedback_Comments__c</fullName>
    <label>Feedback Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>