force-app/main/default/objects/CEMS_Internal_Scheduler__c/fields/CEMS_Interview_End_Time__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Interview_End_Time__c</fullName>
    <label>Interview End Time</label>
    <type>DateTime</type>
</CustomField>