force-app/main/default/objects/CEMS_Internal_Scheduler__c/fields/CEMS_Interview_Location__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Interview_Location__c</fullName>
    <label>Interview Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>