force-app/main/default/objects/CEMS_Internal_Scheduler__c/fields/CEMS_Interview_Panel__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Interview_Panel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Start typing the name or any relevant keyword of the panel member you want to include in the interview panel.</inlineHelpText>
    <label>Interview Panel</label>
    <referenceTo>CEMS_Interview_Panel__c</referenceTo>
    <relationshipLabel>Interview Scheduler</relationshipLabel>
    <relationshipName>Interview_Scheduler</relationshipName>
    <type>Lookup</type>
</CustomField>