force-app/main/default/objects/CEMS_Internal_Scheduler__c/fields/CEMS_Interview_Round__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Interview_Round__c</fullName>
    <label>Interview Round</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non Technical Round</fullName>
            </value>
            <value>
                <fullName>Technical Round</fullName>
            </value>
            <value>
                <fullName>HR Round</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>