force-app/main/default/objects/CEMS_Internal_Scheduler__c/fields/CEMS_Interview_Stage__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Interview_Stage__c</fullName>
    <label>Interview Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
                <default>true</default>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>Screening Test Passed</fullName>
            </value>
            <value>
                <fullName>Interview Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>