force-app/main/default/objects/CEMS_Internal_Scheduler__c/fields/CEMS_Interview_Type__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Interview_Type__c</fullName>
    <label>Interview Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Person Interview</fullName>
            </value>
            <value>
                <fullName>Virtual Interview</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>