force-app/main/default/objects/CEMS_Internal_Scheduler__c/fields/CEMS_IsFeedbackSubmitted__c.field-meta.xml
<CustomField>
    <fullName>CEMS_IsFeedbackSubmitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFeedbackSubmitted</label>
    <type>Checkbox</type>
</CustomField>