force-app/main/default/objects/CEMS_Internal_Scheduler__c/fields/CEMS_Job_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Job_Application_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the Job Application ID in the format of &quot;JA-XXX&quot; or type relevant keywords associated with the job application.</inlineHelpText>
    <label>Job Application ID</label>
    <referenceTo>CEMS_Job_Application__c</referenceTo>
    <relationshipLabel>Interview Scheduler</relationshipLabel>
    <relationshipName>Interview_Scheduler</relationshipName>
    <type>Lookup</type>
</CustomField>