force-app/main/default/objects/CEMS_Internal_Scheduler__c/fields/CEMS_Meeting_Link__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Meeting_Link__c</fullName>
    <label>Meeting Link</label>
    <type>Url</type>
</CustomField>