force-app/main/default/objects/CEMS_Internal_Scheduler__c/fields/CEMS_Skill_1__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Skill_1__c</fullName>
    <label>Skill 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>