force-app/main/default/objects/CEMS_Internal_Scheduler__c/fields/CEMS_Skill_1_Rating__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Skill_1_Rating__c</fullName>
    <label>Skill 1 Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>