force-app/main/default/objects/CEMS_Internal_Scheduler__c/fields/CEMS_Skill_2__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Skill_2__c</fullName>
    <label>Skill 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>