force-app/main/default/objects/CEMS_Internal_Scheduler__c/fields/CEMS_Skill_3_Comment__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Skill_3_Comment__c</fullName>
    <label>Skill 3 Comment</label>
    <type>TextArea</type>
</CustomField>