force-app/main/default/objects/CEMS_Internal_Scheduler__c/recordTypes/CEMS_Client_Interview.recordType-meta.xml
<RecordType>
    <fullName>CEMS_Client_Interview</fullName>
    <active>true</active>
    <label>Client Interview</label>
</RecordType>