force-app/main/default/objects/CEMS_Internal_Scheduler__c/recordTypes/CEMS_Company_Interview.recordType-meta.xml
<RecordType>
    <fullName>CEMS_Company_Interview</fullName>
    <active>true</active>
    <label>Company Interview</label>
</RecordType>