force-app/main/default/objects/CEMS_Internal_Scheduler__c/validationRules/CEMS_Greater_than_Interview_Start_time.validationRule-meta.xml
<ValidationRule>
    <fullName>CEMS_Greater_than_Interview_Start_time</fullName>
    <active>true</active>
    <errorConditionFormula>CEMS_Interview_End_Time__c &lt;= CEMS_Interview_Start_Time__c</errorConditionFormula>
    <errorDisplayField>CEMS_Interview_End_Time__c</errorDisplayField>
    <errorMessage>Interview End Time should be greater than Interview Start time</errorMessage>
</ValidationRule>