force-app/main/default/objects/CEMS_Internal_Scheduler__c/validationRules/CEMS_Greater_than_or_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>CEMS_Greater_than_or_Today</fullName>
    <active>true</active>
    <errorConditionFormula>CEMS_Interview_Start_Time__c &lt;= DATETIMEVALUE( CreatedDate )</errorConditionFormula>
    <errorDisplayField>CEMS_Interview_Start_Time__c</errorDisplayField>
    <errorMessage>To proceed with the interview start time, please select a date that is equal to or later than today&apos;s date</errorMessage>
</ValidationRule>