force-app/main/default/objects/CEMS_Internal_Scheduler__c/validationRules/CEMS_Meeting_Link_ValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>CEMS_Meeting_Link_ValidationRule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK( CEMS_Meeting_Link__c )),
  NOT(
    OR(
      REGEX( CEMS_Meeting_Link__c, &quot;^http://[a-zA-Z0-9\\-\\.]+\\.[a-zA-Z]{2,3}(/\\S*)?$&quot;),
      REGEX(CEMS_Meeting_Link__c, &quot;^https://[a-zA-Z0-9\\-\\.]+\\.[a-zA-Z]{2,3}(/\\S*)?$&quot;)
    )
  )
)</errorConditionFormula>
    <errorDisplayField>CEMS_Meeting_Link__c</errorDisplayField>
    <errorMessage>The URL entered is invalid. Please enter a valid URL starting with http:// or https://.</errorMessage>
</ValidationRule>