force-app/main/default/objects/CEMS_Internal_Scheduler__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CEMS_Interview_Location__c</columns>
    <columns>CEMS_Interview_Panel__c</columns>
    <columns>CEMS_Meeting_Link__c</columns>
    <columns>CEMS_Interview_Status__c</columns>
    <columns>CEMS_Interview_Type__c</columns>
    <columns>CEMS_Job_Application_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>